@startuml classesDiagram
class  Course {
    name: String
    tutors: Tutor[]
    students: Student[]
    tasks : Task[]
    topList : TopList[]
    ---
    addTask(task)
    addPerson(person)
    ---
    Хранит данные о 
    преподавателях, студентах 
    и задачах одной дисциплины.
}
class Person{
    name: String
    courses: Course[]
    ---
    Класс родитель для
    пользователей систмы.
}
class Tutor extends Person {
    post: String    
    ---
    setGrade(task, person, grade)
    setTopList(Course)
    ---
    Хранит данные о пользователе преподаватель.
}
class Student extends Person {
    group : String
    ---
    Хранит данные о
    студенте, пользователе
    системы.
}
class Type {
    name : String
    shortName : String
    ---
    Хранит краткие
    сведения о типе
    задания.
}
class Task {
    type : Type
    description : String
    shortName : String
    maxValue : Integer
    deadline : Date
    grades : Grade[]
    ---
    Хранит данные о задании
    вложенном в курс. Имеет
    максимальную оценку задания в
    качестве поля
    и массив оценок по этому
    заданию.
}
class Grade {
    value : Integer
    date : Date
    student : Student
    ---
    Хранит данные об оценке
    полученной стедентом.
    Каждый представитель этого
    класса хранит ссылку на 
    студента получившего оценку.
}
class TopList{
    gradeValue: Integer
    weight: Double
    numberOfTasks_N: Integer
    task_i: Integer
    maxValue: Integer
    ---
    Хранит данные о результатах\nподсчета рейтинга из массива\nзадач представленного курсом.
}

Course "*" <-- "*" Tutor
Course "*" <-- "*" Student
Course "1" <-- "*" Task
Student "1" <-- "*" Grade
Task "*" <-- "1" Type
Task "1" <-- "*" Grade
TopList "*" -> "1" Course
Tutor "1" --> "*" TopList
@enduml